manifests/cic-cache/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-cache-server
  labels:
    app: cic-cache-server
spec:
  selector:
    matchLabels:
      app: cic-cache-server
  replicas: 1
  template:
    metadata:
      labels:
        app: cic-cache-server
        group: cic-stack
    spec:
      containers:
        - name: cic-cache-server
          image: docker.grassecon.net/cic-stack/cic-cache:0.5.55
          imagePullPolicy: Always
          command:
            [
              "/usr/local/bin/uwsgi",
              "--wsgi-file=/root/cic_cache/runnable/daemons/server.py",
              "--http=:8000",
              "--pyargv",
              "-vv",
            ]
          ports:
            - containerPort: 8000
              name: server
      restartPolicy: Always
