manifests/cic-cache/tracker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-cache-tracker
  labels:
    app: cic-cache-tracker
spec:
  selector:
    matchLabels:
      app: cic-cache-tracker
  replicas: 1
  template:
    metadata:
      labels:
        app: cic-cache-tracker
        group: cic-stack
    spec:
      containers:
        - name: cic-cache-tracker
          image: registry.gitlab.com/grassrootseconomics/cic-internal-integration/cic-cache:0.5.81
          command: ["./start_tracker.sh", "-v"]
      restartPolicy: Always
