manifests/cic-cache/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cache
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cache.grassecon.org`)
      kind: Rule
      services:
        - name: cic-cache-svc
          port: server
  tls:
    secretName: cache.grassecon.org.cert
